Fixed some image vertical alignment by using CSS' vertical-align method. Fixed top navigation leading border.

--- a/data/css/default.css
+++ b/data/css/default.css
@@ -1,5 +1,5 @@
 * { outline: 0; }
-img { border: 0; }
+img { border: 0; vertical-align: middle;}
 
 body {
 background-color:#fff;
